# UniFr-OS-Project-SP18

./: .gitignore  CMakeLists.txt  README.md  client1.cmd  client10.cmd  client11.cmd  client2.cmd  client3.cmd  client4.cmd  client5.cmd  client6.cmd  client7.cmd  client8.cmd  client9.cmd  hello.cmd  run.sh
benchmarks/: test_results.sh
benchmarks/collisions/: client1.cmd  client4.cmd  client5.cmd  client6.cmd  client7.cmd  client8.cmd  client9.cmd  run.sh
benchmarks/many_clients/: .gitignore  create_script.sh
benchmarks/no_collisions/: .gitignore  create_script.sh
key-value-database/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
key-value-database/src/: debug.h
key-value-database/src/client/: CMakeLists.txt  Makefile  client  cmake_install.cmake  main.c  shell.c  shell.h
key-value-database/src/data_structures/: dequeue.c  dequeue.h
key-value-database/src/data_structures/dequeue/: dequeue.c  dequeue.h
key-value-database/src/data_structures/parallel/lock_free_set/: lock_free_set.c  lock_free_set.h
key-value-database/src/server/: CMakeLists.txt  Makefile  cmake_install.cmake  database_actions.c  database_actions.h  main.c  server  server_connection.c  tcp_shell.c  tcp_shell.h
key-value-database/src/server/database/: database_actions.c  database_actions.h  key_value_database_typedef.c  key_value_database_typedef.h
key-value-database/src/server/database/lock_free_set/: lock_free_set.c  lock_free_set.h  lock_free_set_hash.c  lock_free_set_hash.h
key-value-database/src/server/database/resources_allocator/: key_value_database_allocator.h  key_value_database_typedef.h
key-value-database/src/server/database/resources_allocator/stack/: stack.c
key-value-database/src/server/lock_free_set/: lock_free_set.c  lock_free_set.h
key-value-database/src/server/resources_allocator/: key_value_database_allocator.c  key_value_database_allocator.h  key_value_database_typedef.h
key-value-database/src/server/resources_allocator/stack/: stack.c  stack.h
key-value-database/test/: CMakeLists.txt  Makefile  cmake_install.cmake
key-value-database/test/unit_test/: CMakeLists.txt  Makefile  Unit_Tests_run  cmake_install.cmake  database_actions_tests.c  macro_utils.h  multi_thread_access_test.c  reverse_test.c  set_semantics_test.c
key-value-database/test/unit_test/data_structures_test/: dequeue_test.c
presentation/: .gitignore  bredelebeamer.cls  latexmkrc  presentation_group4.tex
report/: bibliography.bib  report.tex
src/: debug.h
src/client/: CMakeLists.txt  commands_executor.c  commands_executor.h  main.c  shell.c  shell.h
src/data_structures/dequeue/: dequeue.c  dequeue.h
src/data_structures/parallel/: atomic.h
src/data_structures/parallel/lock_free_set/: lock_free_set.c  lock_free_set.h  lock_free_set_hash.c
src/data_structures/stack/: stack.c  stack.h
src/server/: CMakeLists.txt  main.c  server_connection.c  server_connection.h  tcp_shell.c  tcp_shell.h  tcp_shell_macros.h
src/server/database/: database_actions.c  database_actions.h  key_value_database_typedef.c
src/server/database/resources_allocator/: key_value_database_allocator.c  key_value_database_allocator.h
src/utils/: command_interface.h  debug.h
test/: CMakeLists.txt  bash_test  bash_test.sh
test/unit_test/: CMakeLists.txt  database_actions_tests.c  macro_utils.h  main_test.c  multi_thread_access_test.c  set_semantics_test.c
test/unit_test/data_structures_test/: dequeue_test.c  dequeue_test_macro.h
test/unit_test/utils/: random.c  random.h
